# JunoAgent

./: .env.example  .gitignore  AGENTS.md  Brain agent implementation roadmap.md  Brain agent platform.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/brain_api/: __init__.py  config.py  deps.py  logging_setup.py  main.py  middleware.py  services.py
apps/api/brain_api/routes/: approvals.py  health.py  memories.py  tasks.py  tools.py
apps/console/: app.js  index.html  styles.css
scripts/: verify_stage1.py  verify_stage2.py  verify_stage4.py  verify_stage5.py  verify_stage6.py
tests/api/: test_console.py  test_memories.py
tests/core/: test_state_machine.py
tests/engine/: test_budget.py  test_context_builder.py  test_memory.py  test_policy.py
