[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juno-brain"
version = "0.1.0"
description = "Brain Agent Platform — core orchestration, planning, and workflow engine."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "structlog>=24.1",
  "python-json-logger>=2.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
  "mypy>=1.8",
]
anthropic = [
  "anthropic>=0.40",
]

[tool.setuptools.packages.find]
where = [
  "apps/api",
  "packages/core",
  "packages/db",
  "packages/llm",
  "packages/prompts",
  "packages/engine",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "apps/api",
  "packages/core",
  "packages/db",
  "packages/llm",
  "packages/prompts",
  "packages/engine",
]
